# pds-live-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  __init__.py  demo.py  finder.py  pyproject.toml  requirements.txt  run_eval.py  test_nodes.py
catalog_finder/: __init__.py  pds_catalog_finder.py
data/: gold_datasets.xlsx  gold_datasets_filtered.xlsx  gold_standard_bundle_collection_dataset_level.xlsx  pds_node_classification.xlsx  pds_node_classification.xlsx.bak  pds_node_classification_blind.xlsx
docs/: pds_node_scraping_plan.md  tool_friction_after.md  tool_friction_baseline.md  tool_optimization_plan.md
docs/node_optimization_briefs/: atm.md  geo.md  img.md  lroc.md  ppi.md  rms.md  sbn.md
live_finder/: README.md  __init__.py  pds_finder.py  pds_geo_finder.py  prompts.py  stage2.py  transports.py
output/20260428_232953/: results.xlsx
output/20260429_005420/: results.xlsx
output/20260429_011710/: results.xlsx
output/20260429_013739/: results.xlsx
output/20260429_014225/: results.xlsx
output/20260429_014909/: results.xlsx
output/20260430_040715/: results.xlsx
output/20260430_075432/: results.xlsx
output/20260430_180656/: results.xlsx
output/20260430_181422/: results.xlsx
scripts/: __init__.py  eval_helpers.py  orchestrator_driver.py  run_eval.py  run_layered_gold.py  test_nodes.py
tools/: __init__.py  browse.py  client.py  holdings.py  inspect.py  inspect_collections.py  inspect_with_collections.py  list_dataset_dirs.py  list_missions.py  mcp_server.py  node_registry.py  probe_datasets.py  scan.py
(+413 files in other folders)
