[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pds-dataset-finder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=0.0.13",
    "fastmcp>=2.0.0",
    "httpx>=0.27",
    "rapidfuzz>=3.0",
    "loguru>=0.7",
    "python-dotenv",
    "openpyxl",
]

[tool.setuptools]
packages = [
    "pydantic_code",
    "pydantic_code.live_finder",
    "pydantic_code.catalog_finder",
    "pydantic_code.tools",
    "pydantic_code.scripts",
]

[tool.setuptools.package-dir]
"pydantic_code" = "."
"pydantic_code.live_finder" = "live_finder"
"pydantic_code.catalog_finder" = "catalog_finder"
"pydantic_code.tools" = "tools"
"pydantic_code.scripts" = "scripts"

[tool.setuptools.package-data]
"pydantic_code" = ["data/*.xlsx"]
